--- a/notebooks/try2.ipynb
+++ b/notebooks/try2.ipynb
@@ -13,8 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# !pip install -e ..\n",
     "\n",
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -52,8 +61,130 @@
      "text": [
       "Config file found at: /Users/daved/Dev/pinon/config/master.xlsx\n",
       "Simfin data directory: /Users/daved/Dev/pinon/simfin_data\n",
+      "Dataset \"us-companies\" on disk (10 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-income-quarterly\" on disk (1 days old).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n",
+      "Dataset \"us-income-banks-quarterly\" on disk (1 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-income-insurance-quarterly\" on disk (1 days old).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-derived-quarterly\" on disk (1 days old).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n",
+      "Dataset \"us-derived-banks-quarterly\" on disk (1 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-derived-insurance-quarterly\" on disk (1 days old).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
       "There is an error in the supplied ticker symbol EEFT in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company uses non stardard quarterly reporting date not currently supported. Company was dropped from the list.\n",
       "There is an error in the supplied ticker symbol PAGS in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company was not found and was dropped from the list.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
      ]
     }
    ],
@@ -66,17 +197,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Adding breaking report for ticker V for report date 2023-03-31\n",
-      "Adding breaking report for ticker DFS for report date 2023-03-31\n",
-      "Here\n",
-      "Here\n",
-      "Here\n"
+      "Adding breaking report for ticker AXP for report date 2022-12-31\n",
+      "Adding breaking report for ticker DFS for report date 2023-03-31\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[9], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m c \u001B[38;5;241m=\u001B[39m pn\u001B[38;5;241m.\u001B[39mComps(config)\n\u001B[0;32m----> 2\u001B[0m \u001B[43mc\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrun\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/Dev/pinon/pinon/comps.py:20\u001B[0m, in \u001B[0;36mrun\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     18\u001B[0m     self.run_peer_ks()\n\u001B[1;32m     19\u001B[0m     self.run_target_ks()\n\u001B[0;32m---> 20\u001B[0m     self.calc_present_comp_ratios()\n\u001B[1;32m     21\u001B[0m \n\u001B[1;32m     22\u001B[0m def run_variations(self):\n",
+      "File \u001B[0;32m~/Dev/pinon/pinon/comps.py:93\u001B[0m, in \u001B[0;36mcalc_present_comp_ratios\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     91\u001B[0m \n\u001B[1;32m     92\u001B[0m             crs[pn_cols.QTR_PE_RATIO_WTD] = crs[pn_cols.MU_QTR_PE_RATIO] * crs[pn_cols.PEER_WEIGHTS]\n\u001B[0;32m---> 93\u001B[0m             crs[pn_cols.TTM_PE_RATIO_WTD] = crs[pn_cols.MU_TTM_PE_RATIO] * crs[pn_cols.PEER_WEIGHTS]\n\u001B[1;32m     94\u001B[0m             crs[pn_cols.QTR_PE_RATIO_WTD_ADJ] = crs[pn_cols.QTR_PE_RATIO_WTD] * target_k[pn_cols.K_TARGET_QTR_PE]\n\u001B[1;32m     95\u001B[0m             crs[pn_cols.TTM_PE_RATIO_WTD_ADJ] = crs[pn_cols.TTM_PE_RATIO_WTD] * target_k[pn_cols.K_TARGET_TTM_PE]\n",
+      "File \u001B[0;32m~/Dev/pinon/pinon/comps.py:93\u001B[0m, in \u001B[0;36mcalc_present_comp_ratios\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     91\u001B[0m \n\u001B[1;32m     92\u001B[0m             crs[pn_cols.QTR_PE_RATIO_WTD] = crs[pn_cols.MU_QTR_PE_RATIO] * crs[pn_cols.PEER_WEIGHTS]\n\u001B[0;32m---> 93\u001B[0m             crs[pn_cols.TTM_PE_RATIO_WTD] = crs[pn_cols.MU_TTM_PE_RATIO] * crs[pn_cols.PEER_WEIGHTS]\n\u001B[1;32m     94\u001B[0m             crs[pn_cols.QTR_PE_RATIO_WTD_ADJ] = crs[pn_cols.QTR_PE_RATIO_WTD] * target_k[pn_cols.K_TARGET_QTR_PE]\n\u001B[1;32m     95\u001B[0m             crs[pn_cols.TTM_PE_RATIO_WTD_ADJ] = crs[pn_cols.TTM_PE_RATIO_WTD] * target_k[pn_cols.K_TARGET_TTM_PE]\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:1179\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.SafeCallWrapper.__call__\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:620\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:929\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:920\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:317\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.do_wait_suspend\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m/Applications/DataSpell.app/Contents/plugins/python-ce/helpers/pydev/pydevd.py:1160\u001B[0m, in \u001B[0;36mPyDB.do_wait_suspend\u001B[0;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[1;32m   1157\u001B[0m         from_this_thread\u001B[38;5;241m.\u001B[39mappend(frame_id)\n\u001B[1;32m   1159\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_threads_suspended_single_notification\u001B[38;5;241m.\u001B[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001B[0;32m-> 1160\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m/Applications/DataSpell.app/Contents/plugins/python-ce/helpers/pydev/pydevd.py:1175\u001B[0m, in \u001B[0;36mPyDB._do_wait_suspend\u001B[0;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[1;32m   1172\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call_mpl_hook()\n\u001B[1;32m   1174\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprocess_internal_commands()\n\u001B[0;32m-> 1175\u001B[0m         \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.01\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1177\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[1;32m   1179\u001B[0m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
