comps.py run_target_ks. Revised to accomodated addition of Year Averaged index.

--- a/notebooks/try2.ipynb
+++ b/notebooks/try2.ipynb
@@ -13,8 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# !pip install -e ..\n",
     "\n",
@@ -44,10 +53,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 33,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Config file found at: /Users/daved/Dev/pinon/config/master.xlsx\n",
+      "Simfin data directory: /Users/daved/Dev/pinon/simfin_data\n",
+      "Dataset \"us-companies\" on disk (1 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-income-quarterly\" on disk (1 days old).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n",
+      "Dataset \"us-income-banks-quarterly\" on disk (1 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-income-insurance-quarterly\" on disk (1 days old).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-derived-quarterly\" on disk (1 days old).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n",
+      "Dataset \"us-derived-banks-quarterly\" on disk (1 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-derived-insurance-quarterly\" on disk (1 days old).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "There is an error in the supplied ticker symbol EEFT in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company uses non stardard quarterly reporting date not currently supported. Company was dropped from the list.\n",
+      "There is an error in the supplied ticker symbol PAGS in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company was not found and was dropped from the list.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    }
+   ],
    "source": [
-    "config = pn.Config('master', 'V', 10)"
+    "config = pn.Config('master', 'V', 15)"
    ],
    "metadata": {
     "collapsed": false
@@ -55,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "outputs": [],
    "source": [
     "c = pn.Comps(config)\n",
