--- a/notebooks/try2.ipynb
+++ b/notebooks/try2.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -64,6 +64,30 @@
      "text": [
       "Config file found at: /Users/daved/Dev/pinon/config/master.xlsx\n",
       "Simfin data directory: /Users/daved/Dev/pinon/simfin_data\n",
+      "Dataset \"us-income-quarterly\" on disk (1 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-income-banks-quarterly\" on disk (1 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-income-insurance-quarterly\" on disk (1 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-derived-quarterly\" on disk (1 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-derived-banks-quarterly\" on disk (1 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-derived-insurance-quarterly\" on disk (1 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
       "There is an error in the supplied ticker symbol PAGS in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company was not found and was dropped from the list.\n"
      ]
     },
@@ -72,17 +96,37 @@
      "output_type": "stream",
      "text": [
       "/Users/daved/Dev/pinon/pinon/config.py:86: FutureWarning: In a future version, object-dtype columns with all-bool values will not be included in reductions with bool_only=True. Explicitly cast to bool dtype instead.\n",
-      "  funds.get_number_report_years(ticker)\n",
+      "  companies.loc[len(companies.index)] = cc\n",
       "/Users/daved/Dev/pinon/pinon/config.py:86: FutureWarning: In a future version, object-dtype columns with all-bool values will not be included in reductions with bool_only=True. Explicitly cast to bool dtype instead.\n",
-      "  funds.get_number_report_years(ticker)\n",
+      "  companies.loc[len(companies.index)] = cc\n",
       "/Users/daved/Dev/pinon/pinon/config.py:86: FutureWarning: In a future version, object-dtype columns with all-bool values will not be included in reductions with bool_only=True. Explicitly cast to bool dtype instead.\n",
-      "  funds.get_number_report_years(ticker)\n",
+      "  companies.loc[len(companies.index)] = cc\n",
       "/Users/daved/Dev/pinon/pinon/config.py:86: FutureWarning: In a future version, object-dtype columns with all-bool values will not be included in reductions with bool_only=True. Explicitly cast to bool dtype instead.\n",
-      "  funds.get_number_report_years(ticker)\n",
+      "  companies.loc[len(companies.index)] = cc\n",
       "/Users/daved/Dev/pinon/pinon/config.py:86: FutureWarning: In a future version, object-dtype columns with all-bool values will not be included in reductions with bool_only=True. Explicitly cast to bool dtype instead.\n",
-      "  funds.get_number_report_years(ticker)\n",
+      "  companies.loc[len(companies.index)] = cc\n",
       "/Users/daved/Dev/pinon/pinon/config.py:86: FutureWarning: In a future version, object-dtype columns with all-bool values will not be included in reductions with bool_only=True. Explicitly cast to bool dtype instead.\n",
-      "  funds.get_number_report_years(ticker)\n"
+      "  companies.loc[len(companies.index)] = cc\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[11], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m config \u001B[38;5;241m=\u001B[39m \u001B[43mpn\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mConfig\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mmaster\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mV\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m15\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/Dev/pinon/pinon/config.py:36\u001B[0m, in \u001B[0;36mConfig.__init__\u001B[0;34m(self, master_config_name, target_sheet_name, past_years_requested)\u001B[0m\n\u001B[1;32m     33\u001B[0m sf\u001B[38;5;241m.\u001B[39mload_api_key(CONFIG_PATH \u001B[38;5;241m/\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124msimfin_api_key.txt\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m     35\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcompanies \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mparse_target_sheet(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtarget_sheet_name, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mpast_years_requested)\n\u001B[0;32m---> 36\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mbreaking_reports \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241m.\u001B[39mparse_breaking_reports(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtarget_sheet_name)\n\u001B[1;32m     37\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mforecasts \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mparse_forecasts(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtarget_sheet_name)\n",
+      "File \u001B[0;32m~/Dev/pinon/pinon/config.py:36\u001B[0m, in \u001B[0;36mConfig.__init__\u001B[0;34m(self, master_config_name, target_sheet_name, past_years_requested)\u001B[0m\n\u001B[1;32m     33\u001B[0m sf\u001B[38;5;241m.\u001B[39mload_api_key(CONFIG_PATH \u001B[38;5;241m/\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124msimfin_api_key.txt\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m     35\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcompanies \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mparse_target_sheet(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtarget_sheet_name, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mpast_years_requested)\n\u001B[0;32m---> 36\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mbreaking_reports \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241m.\u001B[39mparse_breaking_reports(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtarget_sheet_name)\n\u001B[1;32m     37\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mforecasts \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mparse_forecasts(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtarget_sheet_name)\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:1187\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.SafeCallWrapper.__call__\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:627\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:937\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:928\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:585\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.do_wait_suspend\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m/Applications/PyCharm.app/Contents/plugins/python/helpers/pydev/pydevd.py:1184\u001B[0m, in \u001B[0;36mPyDB.do_wait_suspend\u001B[0;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[1;32m   1181\u001B[0m         from_this_thread\u001B[38;5;241m.\u001B[39mappend(frame_id)\n\u001B[1;32m   1183\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_threads_suspended_single_notification\u001B[38;5;241m.\u001B[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001B[0;32m-> 1184\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m/Applications/PyCharm.app/Contents/plugins/python/helpers/pydev/pydevd.py:1199\u001B[0m, in \u001B[0;36mPyDB._do_wait_suspend\u001B[0;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[1;32m   1196\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call_mpl_hook()\n\u001B[1;32m   1198\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprocess_internal_commands()\n\u001B[0;32m-> 1199\u001B[0m         \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.01\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1201\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[1;32m   1203\u001B[0m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
@@ -91,9 +135,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2024-04-06T17:26:14.291214Z"
+     "end_time": "2024-04-08T10:30:15.287273Z",
+     "start_time": "2024-04-08T10:29:33.362148Z"
     }
    }
   },
