--- a/notebooks/try1.ipynb
+++ b/notebooks/try1.ipynb
@@ -28,8 +28,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Config file found at: /Users/daved/Dev/pinon/config/master.xlsx\n",
-      "Simfin data directory: /Users/daved/Dev/pinon/simfin_data\n"
+      "Break\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Config.__init__() missing 1 required positional argument: 'target_sheet_name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 21\u001B[0m\n\u001B[1;32m     18\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01msimfin\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01msf\u001B[39;00m\n\u001B[1;32m     19\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01msimfin\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mnames\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01msf_cols\u001B[39;00m  \u001B[38;5;66;03m# column name shortcuts\u001B[39;00m\n\u001B[0;32m---> 21\u001B[0m config \u001B[38;5;241m=\u001B[39m \u001B[43mpn\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mConfig\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mmaster\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "\u001B[0;31mTypeError\u001B[0m: Config.__init__() missing 1 required positional argument: 'target_sheet_name'"
      ]
     }
    ],
@@ -57,7 +67,11 @@
     "config = pn.Config('master')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-16T16:40:42.952970Z",
+     "start_time": "2024-04-16T16:40:42.175394Z"
+    }
    }
   },
   {
