run_validation WIP.

--- a/notebooks/try2.ipynb
+++ b/notebooks/try2.ipynb
@@ -74,82 +74,30 @@
      "output_type": "stream",
      "text": [
       "Break\n",
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
+      "Here\n",
+      "Here\n",
+      "Here\n",
+      "Here\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"pandas/_libs/tslibs/offsets.pyx\", line 3878, in pandas._libs.tslibs.offsets._get_offset\n",
-      "KeyError: 'QE'\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"pandas/_libs/tslibs/offsets.pyx\", line 3979, in pandas._libs.tslibs.offsets.to_offset\n",
-      "  File \"pandas/_libs/tslibs/offsets.pyx\", line 3884, in pandas._libs.tslibs.offsets._get_offset\n",
-      "ValueError: Invalid frequency: QE\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/pandas/core/window/rolling.py\", line 1834, in _validate\n",
-      "    freq = to_offset(self.window)\n",
-      "  File \"pandas/_libs/tslibs/offsets.pyx\", line 3891, in pandas._libs.tslibs.offsets.to_offset\n",
-      "  File \"pandas/_libs/tslibs/offsets.pyx\", line 3987, in pandas._libs.tslibs.offsets.to_offset\n",
-      "ValueError: Invalid frequency: 4QE\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/9p/f2tvcxd55k125ycs4hyyx6800000gn/T/ipykernel_39927/1397769758.py\", line 1, in <module>\n",
-      "    c.run_validation()\n",
-      "  File \"/Users/daved/Dev/pinon/pinon/comps.py\", line 66, in run_validation\n",
-      "    val_k[pn_cols.ROI_1_YEAR] = self.multiples.price_ratios.loc[(peer_ticker,), pn_cols.MU_QTR_PRICE].rolling('4QE', min_periods=1).apply(self.calc_roi)\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/pandas/core/generic.py\", line 11999, in rolling\n",
-      "    return Rolling(\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/pandas/core/window/rolling.py\", line 165, in __init__\n",
-      "    self._validate()\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/pandas/core/window/rolling.py\", line 1836, in _validate\n",
-      "    raise ValueError(\n",
-      "ValueError: passed window 4QE is not compatible with a datetimelike index\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 2144, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1435, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1326, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1173, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1088, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(record))\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 970, in format_record\n",
-      "    frame_info.lines, Colors, self.has_colors, lvals\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 792, in lines\n",
-      "    return self._sd.lines\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/core.py\", line 698, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/core.py\", line 649, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/core.py\", line 628, in executing_piece\n",
-      "    return only(\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/executing/executing.py\", line 164, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[20], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mc\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrun_validation\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/Dev/pinon/pinon/comps.py:69\u001B[0m, in \u001B[0;36mComps.run_validation\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     66\u001B[0m         l \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mlen\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmultiples\u001B[38;5;241m.\u001B[39mprice_ratios\u001B[38;5;241m.\u001B[39mloc[(peer_ticker, )])\n\u001B[1;32m     67\u001B[0m         s \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmultiples\u001B[38;5;241m.\u001B[39mprice_ratios\u001B[38;5;241m.\u001B[39mloc[(peer_ticker,), pn_cols\u001B[38;5;241m.\u001B[39mMU_QTR_PRICE]\u001B[38;5;241m.\u001B[39mrolling(l)\u001B[38;5;241m.\u001B[39mapply(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcalc_roi, raw\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m, args\u001B[38;5;241m=\u001B[39m(peer_ticker, l\u001B[38;5;241m/\u001B[39m\u001B[38;5;241m4\u001B[39m))\u001B[38;5;241m.\u001B[39mshift(\u001B[38;5;241m-\u001B[39ml\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m---> 69\u001B[0m     val_k\u001B[38;5;241m.\u001B[39mloc[(peer_ticker,), (roi_ndx,)] \u001B[38;5;241m=\u001B[39m \u001B[43ms\u001B[49m\u001B[38;5;241m.\u001B[39mvalues\n\u001B[1;32m     70\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mHere\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m     72\u001B[0m val_k[pn_cols\u001B[38;5;241m.\u001B[39mMU_QTR_PRICE] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmultiples\u001B[38;5;241m.\u001B[39mprice_ratios\u001B[38;5;241m.\u001B[39mloc[peer_ticker, pn_cols\u001B[38;5;241m.\u001B[39mMU_QTR_PRICE]\n",
+      "File \u001B[0;32m~/Dev/pinon/pinon/comps.py:69\u001B[0m, in \u001B[0;36mComps.run_validation\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     66\u001B[0m         l \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mlen\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmultiples\u001B[38;5;241m.\u001B[39mprice_ratios\u001B[38;5;241m.\u001B[39mloc[(peer_ticker, )])\n\u001B[1;32m     67\u001B[0m         s \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmultiples\u001B[38;5;241m.\u001B[39mprice_ratios\u001B[38;5;241m.\u001B[39mloc[(peer_ticker,), pn_cols\u001B[38;5;241m.\u001B[39mMU_QTR_PRICE]\u001B[38;5;241m.\u001B[39mrolling(l)\u001B[38;5;241m.\u001B[39mapply(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcalc_roi, raw\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m, args\u001B[38;5;241m=\u001B[39m(peer_ticker, l\u001B[38;5;241m/\u001B[39m\u001B[38;5;241m4\u001B[39m))\u001B[38;5;241m.\u001B[39mshift(\u001B[38;5;241m-\u001B[39ml\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m---> 69\u001B[0m     val_k\u001B[38;5;241m.\u001B[39mloc[(peer_ticker,), (roi_ndx,)] \u001B[38;5;241m=\u001B[39m \u001B[43ms\u001B[49m\u001B[38;5;241m.\u001B[39mvalues\n\u001B[1;32m     70\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mHere\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m     72\u001B[0m val_k[pn_cols\u001B[38;5;241m.\u001B[39mMU_QTR_PRICE] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmultiples\u001B[38;5;241m.\u001B[39mprice_ratios\u001B[38;5;241m.\u001B[39mloc[peer_ticker, pn_cols\u001B[38;5;241m.\u001B[39mMU_QTR_PRICE]\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:1187\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.SafeCallWrapper.__call__\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:627\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:1103\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:1065\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_310_64.pyx:585\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.do_wait_suspend\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m/Applications/PyCharm.app/Contents/plugins/python/helpers/pydev/pydevd.py:1184\u001B[0m, in \u001B[0;36mPyDB.do_wait_suspend\u001B[0;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[1;32m   1181\u001B[0m         from_this_thread\u001B[38;5;241m.\u001B[39mappend(frame_id)\n\u001B[1;32m   1183\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_threads_suspended_single_notification\u001B[38;5;241m.\u001B[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001B[0;32m-> 1184\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m/Applications/PyCharm.app/Contents/plugins/python/helpers/pydev/pydevd.py:1199\u001B[0m, in \u001B[0;36mPyDB._do_wait_suspend\u001B[0;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[1;32m   1196\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call_mpl_hook()\n\u001B[1;32m   1198\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprocess_internal_commands()\n\u001B[0;32m-> 1199\u001B[0m         \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.01\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1201\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[1;32m   1203\u001B[0m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
@@ -159,11 +107,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-26T17:07:28.658640Z",
-     "start_time": "2024-04-26T17:07:16.582475Z"
+     "end_time": "2024-04-30T18:38:12.689876Z",
+     "start_time": "2024-04-30T18:35:40.554148Z"
     }
    },
-   "execution_count": 21
+   "execution_count": 20
   },
   {
    "cell_type": "code",
